# ymir-terminal

./: .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  COMMIT_EDITMSG  README.md  bunfig.toml  eslint.config.js  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: ci.yml  release.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: index.test.ts  index.ts
apps/cli/src/commands/: launch.ts  update.test.ts  update.ts  web.ts
apps/client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts
apps/client/__tests__/: render.test.tsx
apps/client/public/fonts/: inter-variable.css
apps/client/scripts/: copy-monaco.ts
apps/client/src/: main.tsx
apps/client/src/components/: AnimatedPane.tsx  (+108 more)
apps/server/: package.json  tsconfig.json  tsconfig.test.json
apps/server/__tests__/: health.test.ts  multi-client.test.ts
apps/server/src/: index.ts  server.ts
docs/: README.md  architecture.md  cli-distribution.md  components.md  desktop-app.md  pane-splitting.md  protocol.md  tab-system.md
docs/archive/: plan-v1.md
docs/plans/: PLAN.md  PROGRESS.md
patches/: ghostty-web@0.4.0.patch
scripts/: build-all.ts  build-cli.ts  build-client-dist.ts  build-client.sh  build-server.ts  build-sidecar.sh  dev.ts  extract-tauri-binary.ts  install.ts  publish-npm.ts  sync-version.ts
scripts/lib/: build-utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  log.rs  main.rs  sidecar.rs
(+250 files in other folders)
