[package]
name = "ymir"
version = "0.1.0"
description = "Ymir Terminal"
authors = ["Ymir"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
getrandom = "0.2"
regex = "1"
hex = "0.4"

[lib]
name = "ymir_lib"
crate-type = ["staticlib", "cdylib", "lib"]
